--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -292,3 +292,15 @@ input.address-input {
 
 @media (min-width: 300px)and (max-width: 767px) {
 }
+
+.show-btn {
+  margin-top: 0;
+  margin-left: 4px;
+  height: 29px;
+  padding: 5px 11px;
+  color: rgb(46, 51, 56);
+  border: 1px solid rgb(46, 51, 56);
+  border-radius: 6px;
+  font-weight: 100;
+  font-size: 11px;
+}
